2005-07-27  Jeremy Cribb <jcribb@email.unc.edu>
	* laser_forcecal.m: added.  Performs force calibration routine and returns a table describing forces measured with respect to voltage applied to coils.  requires user to identify 'dominant coil' used in experimental process.
	* extract_magnet_log: added textual output describing timing between magnet and tracking log files.

2005-07-19  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: Corrected documentation.
	* extract_magnet_log.m: added.  Extracts magnet data for time periods relevant to recorded timestamps of input (video or laser).
	
2005-06-20  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: used binning in 2D force plot instead of interpolated surface.  It runs slower, but makes more sense.  Changed the origin to coincide with the defined center of the pole tip.  Plots now have axes in microns instead of pixels. Changed the outputs to Force table, error table, and step size.  Updated documentation.

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: cleaned up code.  fixed bug in offset of 1D force-distance plot.

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: added documentation.
	
2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* fcd_forcecal2d.m: removed and renamed to forcecal2d.m
	* forcecal2d.m: added. added the MIP background, and separated the plots into different figures so that they might have different colormaps.

2005-06-09  Kalpit Desai <kvdesai@email.unc.edu>
	* visVelocities.m: 
	- Commented out the code that was removing the datapoints with absolutely zero velocities. For simulation purposes, we would like to see this data points through.

2005-01-10  Kalpit Desai <kvdesai@email.unc.edu>
	* visVelocities.m: 
	- Now has pole-locations plotted in the 'hairs' mode also.
	- Also cleaned up the background grid and tick-marks that weren't helping in visualization.

2004-12-06  Jeremy Cribb <jcribb@email.unc.edu>